k8s/kustomize/overlays/hlg/ingress.yaml
apiVersion: networking.k8s.io/v1 ## External Ingress
kind: Ingress
metadata:
  name: flask-app-tembici-ext
  labels:
      name: flask-app-tembici
  annotations:
    kubernetes.io/ingress.class: gce ## GCP External LB - Ingress Controller
    kubernetes.io/ingress.global-static-ip-name: gke-lb-ext-tembici-hlg
    ingressclass.kubernetes.io/is-default-class: "true"
    networking.gke.io/managed-certificates: hlg-leosete7-com
    # kubernetes.io/ingress.allow-http: "false" ## Only available after LB is fully programmed.
spec:
  rules: ## Ingress Resource
  - host: flask-app-tembici-hlg.leosete7.com
    http:
      paths:
      - path: /api/ping
        pathType: Prefix
        backend:
          service:
            name: flask-app-tembici
            port:
              number: 8080
